guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-service
spec:
  type: NodePort
  selector:
    app: guestbook-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000
